[package]
name = "mwha2mqtt"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["common", "client", "mwha2mqttd", "mwhaemu", "mwhacli"]  # "mwhamixergtk", 

[workspace.dependencies]
regex = "1"

clap = { version = "4.2.5", features = ["derive"] }

strum = { version = "0.25.0", features = ["derive"] }
strum_macros = "0.25.0"

serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"

rumqttc = { version = "0.22.0", features = ["url"] }

log = "0.4.17"

anyhow = "1.0.71"

thiserror = "1.0.40"

crossbeam-channel = "0.5.8"

figment = { version = "0.10.8", features = ["toml"] }


[dependencies]



# lazy_static = "1.4.0"


# toml = "0.7.3"
#
# figment = { version = "0.10.8", features = ["toml"] }
# humantime-serde = "1.1.1"

# 
# heck = "0.4.1"
# liquid = "0.26.1"
# liquid-core = "0.26.1"
# enum_dispatch = "0.3.11"
# io-enum = "1.1.0"
# delegate = "0.9.0"
# void = "1.0.2"
# 
# systemd-journal-logger = "1.0.0"
# simplelog = "0.12.1"
# rand = "0.8.5"
# signal-hook = "0.3.15"
# anyhow = "1.0.71"
# thiserror = "1.0.40"