[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
rumqttc.workspace = true

serde.workspace = true
serde_json.workspace = true

log.workspace = true

strum.workspace = true
strum_macros.workspace = true

thiserror.workspace = true

crossbeam-channel.workspace = true

anyhow.workspace = true

url.workspace = true

rustls-pemfile = "1.0.2"
rustls-native-certs = "0.6.3"

figment.workspace = true

heck = "0.4.1"

[dev-dependencies]
temp-env = "0.3.4"