[package]
name = "mwha2mqttd"
version = "0.1.0"
edition = "2021"


[dependencies]
common = { path = "../common" }

regex.workspace = true
clap.workspace = true

rumqttc.workspace = true

serde.workspace = true
serde_json.workspace = true

log.workspace = true

strum.workspace = true
strum_macros.workspace = true


anyhow.workspace = true
thiserror.workspace = true

url.workspace = true

serialport = "4.2.0"

figment = { version = "0.10.8", features = ["toml"] }
humantime-serde = "1.1.1"

heck = "0.4.1"

delegate = "0.9.0"
void = "1.0.2"
# 
#systemd-journal-logger = "1.0.0"
simplelog = "0.12.1"
rand = "0.8.5"
signal-hook = "0.3.15"


